--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "next build",
     "export": "next export",
     "start": "next start",
-    "predeploy": "next build && next export",
-    "deploy": "gh-pages -d out"
+    "predeploy": "next build && next export && touch ./out/.nojekyll",
+    "deploy": "gh-pages -d out  -t true"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
