--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "emailjs-com": "^2.6.3",
     "next": "11.1.3",
     "react": "16.14.0",
+    "react-animations": "^1.0.0",
     "react-circular-progressbar": "^2.0.3",
     "react-dom": "16.14.0",
     "react-modal": "^3.11.2",
     "react-show-more-list": "^0.5.2",
-    "smoothscroll-polyfill": "^0.4.4"
+    "smoothscroll-polyfill": "^0.4.4",
+    "styled-components": "^5.3.3"
   },
   "eslintConfig": {
     "extends": "react-app"
