--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "16.14.0",
     "react-modal": "^3.11.2",
     "react-show-more-list": "^0.5.2",
+    "react-tooltip": "^4.2.21",
     "smoothscroll-polyfill": "^0.4.4",
     "styled-components": "^5.3.3"
   },
